--- a/reference.bib
+++ b/reference.bib
@@ -1171,6 +1171,13 @@
   volume  = {28}
 }
 
+@inproceedings{Handa2015,
+  title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
+  author    = {Ankur Handa and Viorica Patraucean and Vijay Badrinarayanan and Simon Stent and Roberto Cipolla},
+  booktitle = CVPR,
+  year      = {2016}
+}
+
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
   journal = SIG,
@@ -1663,6 +1670,7 @@
   volume    = {1666}
 }
 
+
 @article{Kopf2007,
   author  = {Kopf, Johannes and Cohen, Michael F. and Lischinski, Dani and Uyttendaele, Matt},
   title   = {Joint bilateral upsampling},
@@ -1671,7 +1679,6 @@
   volume  = {26},
   number  = {3}
 }
-
 
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
@@ -1779,6 +1786,7 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
+
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1797,7 +1805,6 @@
   volume  = {30},
   number  = {4}
 }
-
 
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
@@ -1830,13 +1837,13 @@
   year      = 2018
 }
 
+
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
   journal = TOG,
   year    = {2020}
 }
-
 
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
@@ -1853,7 +1860,6 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
-
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1862,6 +1868,7 @@
   volume  = {35},
   number  = {5}
 }
+
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2242,6 +2249,7 @@
   year      = {2019}
 }
 
+
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
   title   = {Multi-level partition of unity implicits},
@@ -2260,7 +2268,6 @@
   number  = {4},
   year    = {2002}
 }
-
 
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
@@ -2436,6 +2443,7 @@
   number  = {1}
 }
 
+
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2450,7 +2458,6 @@
   booktitle = NeurIPS,
   year      = {2015}
 }
-
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2521,6 +2528,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
@@ -2536,7 +2544,6 @@
   year    = {2015},
   volume  = {13}
 }
-
 
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
@@ -2607,6 +2614,7 @@
   number  = {4}
 }
 
+
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2625,7 +2633,6 @@
   number  = {3}
 }
 
-
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2635,13 +2642,13 @@
   year    = {2007}
 }
 
+
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
@@ -2691,6 +2698,7 @@
   year    = {2015}
 }
 
+
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
@@ -2706,7 +2714,6 @@
   year    = {2019}
 }
 
-
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -2714,6 +2721,7 @@
   year    = {2016},
   volume  = {43}
 }
+
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2723,7 +2731,6 @@
   volume  = {30},
   number  = {6}
 }
-
 
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
@@ -2781,6 +2788,7 @@
   year         = {2017}
 }
 
+
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
@@ -2795,7 +2803,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @online{Song2019,
   author       = {Shuran Song},
@@ -2858,6 +2865,7 @@
   number  = {5}
 }
 
+
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
   title   = {Fast and effective feature-preserving mesh denoising},
@@ -2876,7 +2884,6 @@
   volume  = {27},
   number  = {3}
 }
-
 
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
@@ -2929,6 +2936,7 @@
   booktitle = CVPR
 }
 
+
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
   author  = {Tan, Hao and Bansal, Mohit},
@@ -2944,13 +2952,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Tang2021,
   title   = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
@@ -2966,7 +2974,6 @@
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -2991,13 +2998,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
@@ -3020,6 +3027,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
@@ -3034,7 +3042,6 @@
   booktitle = ICCV,
   year      = {1998}
 }
-
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3266,6 +3273,7 @@
   year      = {2021}
 }
 
+
 @inproceedings{Wang2021a,
   title     = {Generalizing to unseen domains: A survey on domain generalization},
   author    = {Wang, Jindong and Lan, Cuiling and Liu, Chang and Ouyang, Yidong and Zeng, Wenjun and Qin, Tao},
@@ -3280,7 +3288,6 @@
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
-
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -3374,6 +3381,7 @@
   year      = {2018}
 }
 
+
 @article{Wu2019,
   author  = {Zhijie Wu and Xiang Wang and Di Lin and Dani Lischinski and Daniel Cohen-Or and Hui Huang},
   title   = {{SAGNet}: Structure-aware generative network for {3D} shape modeling},
@@ -3390,7 +3398,6 @@
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
-
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -3470,6 +3477,7 @@
   number  = {1}
 }
 
+
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
@@ -3484,7 +3492,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
@@ -3508,6 +3515,7 @@
   year      = {2006}
 }
 
+
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
@@ -3522,7 +3530,6 @@
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
-
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3540,13 +3547,13 @@
   year      = {2017}
 }
 
+
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
   journal = TPAMI,
   year    = {2018}
 }
-
 
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
@@ -3594,6 +3601,7 @@
   year      = {2017}
 }
 
+
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -3621,7 +3629,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
@@ -3635,6 +3642,7 @@
   title     = {{PartNet}: A Recursive Part Decomposition Network for Fine-grained and Hierarchical Shape Segmentation},
   year      = {2019}
 }
+
 
 @inproceedings{Yu2021,
   title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
@@ -3650,7 +3658,6 @@
   journal = {arXiv:2111.14819},
   year    = {2021}
 }
-
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3691,13 +3698,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3708,6 +3715,7 @@
   number  = {7}
 }
 
+
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -3716,7 +3724,6 @@
   volume  = {34},
   issue   = {7}
 }
-
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -3732,13 +3739,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
   author    = {Zhang, Pingping and Liu, Wei and Lei, Yinjie and Lu, Huchuan and Yang, Xiaoyun},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
@@ -3747,13 +3754,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
   author    = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Zhang2021a,
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
