--- a/reference.bib
+++ b/reference.bib
@@ -1634,11 +1634,11 @@
   year      = {2013}
 }
 
-@article{Kingma2014a,
-  title   = {Adam: A method for stochastic optimization},
-  author  = {Kingma, Diederik P. and Ba, Jimmy},
-  journal = ICLR,
-  year    = {2014}
+@inproceedings{Kingma2014a,
+  title     = {Adam: A method for stochastic optimization},
+  author    = {Kingma, Diederik P. and Ba, Jimmy},
+  booktitle = ICLR,
+  year      = {2014}
 }
 
 @inproceedings{Klokov2017,
@@ -2960,11 +2960,11 @@
 }
 
 
-@article{Tang2021,
-  title   = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
-  author  = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
-  journal = NeurIPS,
-  year    = {2021}
+@inproceedings{Tang2021,
+  title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
+  author    = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
+  booktitle = NeurIPS,
+  year      = {2021}
 }
 
 
