--- a/reference.bib
+++ b/reference.bib
@@ -2315,6 +2315,13 @@
   year      = {2019}
 }
 
+@inproceedings{Park2022,
+  title     = {Fast Point Transformer},
+  author    = {Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},
+  booktitle = CVPR,
+  year      = {2022}
+}
+
 @inproceedings{Pathak2017,
   author    = {Pathak, Deepak and Girshick, Ross and Doll{\'a}r, Piotr and Darrell, Trevor and Hariharan, Bharath},
   booktitle = CVPR,
@@ -2434,6 +2441,7 @@
   year    = 2020
 }
 
+
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2450,7 +2458,6 @@
   year      = {2019},
   publisher = {Elsevier}
 }
-
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -2519,6 +2526,7 @@
   issn    = {0377-0427}
 }
 
+
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2535,7 +2543,6 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2605,6 +2612,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2623,7 +2631,6 @@
   year    = {2010}
 }
 
-
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2633,6 +2640,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2641,7 +2649,6 @@
   number  = {3},
   year    = {2007}
 }
-
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2691,6 +2698,7 @@
   number  = {3}
 }
 
+
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2706,13 +2714,13 @@
   year    = {2021}
 }
 
-
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
+
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2721,7 +2729,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2781,6 +2788,7 @@
   year      = {2020}
 }
 
+
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -2795,7 +2803,6 @@
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
-
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2856,6 +2863,7 @@
   year      = {2020}
 }
 
+
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -2874,7 +2882,6 @@
   volume  = {13},
   number  = {5}
 }
-
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -2929,6 +2936,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
@@ -2944,13 +2952,13 @@
   year    = {2019}
 }
 
-
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -2966,7 +2974,6 @@
   booktitle = NeurIPS,
   year      = {2021}
 }
-
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -2991,13 +2998,13 @@
   year      = {2002}
 }
 
+
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3020,6 +3027,7 @@
   year      = 2019
 }
 
+
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3034,7 +3042,6 @@
   booktitle = IROS,
   year      = {2017}
 }
-
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3266,6 +3273,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3280,7 +3288,6 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
-
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3374,6 +3381,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
   title     = {Learning shape priors for single-view {3D} completion and reconstruction},
@@ -3390,7 +3398,6 @@
   volume  = {38},
   number  = {4}
 }
-
 
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
@@ -3468,6 +3475,7 @@
   year      = {2015}
 }
 
+
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3484,7 +3492,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -3508,6 +3515,7 @@
   issn      = {1530-1052}
 }
 
+
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
@@ -3522,7 +3530,6 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
-
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3540,13 +3547,13 @@
   year    = {2015}
 }
 
+
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
-
 
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
@@ -3594,6 +3601,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
@@ -3619,7 +3627,6 @@
   year      = {2018}
 }
 
-
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -3636,6 +3643,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
   booktitle = CVPR,
@@ -3650,7 +3658,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
@@ -3689,6 +3696,7 @@
   number  = {6}
 }
 
+
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3698,13 +3706,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3714,7 +3722,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3732,13 +3739,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3747,13 +3754,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3765,7 +3772,7 @@
 @article{Zhang2021a,
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
   author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
-  journal = {arXiv:2108.06076},
+  journal = {arXiv preprint arXiv:2108.06076},
   year    = {2021}
 }
 
@@ -3865,6 +3872,7 @@
   year      = {2020},
   booktitle = CVPR
 }
+
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
