--- a/reference.bib
+++ b/reference.bib
@@ -2249,7 +2249,6 @@
   year      = {2019}
 }
 
-
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
   title   = {Multi-level partition of unity implicits},
@@ -2258,7 +2257,6 @@
   volume  = {22},
   number  = {3}
 }
-
 
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
@@ -2269,6 +2267,7 @@
   year    = {2002}
 }
 
+
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
   author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
@@ -2277,6 +2276,7 @@
   number  = {2},
   year    = {2009}
 }
+
 
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
@@ -2441,7 +2441,6 @@
   year    = 2020
 }
 
-
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2451,7 +2450,6 @@
   number  = {1}
 }
 
-
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2459,12 +2457,14 @@
   publisher = {Elsevier}
 }
 
+
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
   title     = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
   booktitle = NeurIPS,
   year      = {2015}
 }
+
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2526,7 +2526,6 @@
   issn    = {0377-0427}
 }
 
-
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2536,6 +2535,13 @@
   number  = {2}
 }
 
+@article{Ruckert2021,
+  title   = {{ADOP}: Approximate differentiable one-pixel point rendering},
+  author  = {R{\"u}ckert, Darius and Franke, Linus and Stamminger, Marc},
+  journal = {arXiv preprint arXiv:2110.06635},
+  year    = {2021}
+}
+
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -2543,6 +2549,7 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2612,7 +2619,6 @@
   year    = {2018}
 }
 
-
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2631,6 +2637,7 @@
   year    = {2010}
 }
 
+
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2640,7 +2647,6 @@
   number  = {3}
 }
 
-
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2649,6 +2655,7 @@
   number  = {3},
   year    = {2007}
 }
+
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2698,7 +2705,6 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2714,13 +2720,13 @@
   year    = {2021}
 }
 
+
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
-
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2729,6 +2735,7 @@
   year    = {2016},
   volume  = {43}
 }
+
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2788,7 +2795,6 @@
   year      = {2020}
 }
 
-
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -2803,6 +2809,7 @@
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
+
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2863,7 +2870,6 @@
   year      = {2020}
 }
 
-
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -2882,6 +2888,7 @@
   volume  = {13},
   number  = {5}
 }
+
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -2936,7 +2943,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
@@ -2952,13 +2958,13 @@
   year    = {2019}
 }
 
+
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -2974,6 +2980,7 @@
   booktitle = NeurIPS,
   year      = {2021}
 }
+
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -2998,13 +3005,13 @@
   year      = {2002}
 }
 
-
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3027,7 +3034,6 @@
   year      = 2019
 }
 
-
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3042,6 +3048,7 @@
   booktitle = IROS,
   year      = {2017}
 }
+
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3273,7 +3280,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3288,6 +3294,7 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
+
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3381,7 +3388,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
   title     = {Learning shape priors for single-view {3D} completion and reconstruction},
@@ -3398,6 +3404,7 @@
   volume  = {38},
   number  = {4}
 }
+
 
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
@@ -3475,7 +3482,6 @@
   year      = {2015}
 }
 
-
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3492,6 +3498,7 @@
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -3515,7 +3522,6 @@
   issn      = {1530-1052}
 }
 
-
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
@@ -3530,6 +3536,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3547,13 +3554,13 @@
   year    = {2015}
 }
 
-
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
+
 
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
@@ -3601,7 +3608,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
@@ -3627,6 +3633,7 @@
   year      = {2018}
 }
 
+
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -3643,7 +3650,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
   booktitle = CVPR,
@@ -3658,6 +3664,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
@@ -3696,7 +3703,6 @@
   number  = {6}
 }
 
-
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3706,13 +3712,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3722,6 +3728,7 @@
   volume  = {21},
   number  = {7}
 }
+
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3739,13 +3746,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3754,13 +3761,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
+
 
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3774,6 +3781,13 @@
   author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
   journal = {arXiv preprint arXiv:2108.06076},
   year    = {2021}
+}
+
+@inproceedings{Zhang2022,
+  author    = {Zhang, Xiaoshuai and Bi, Sai and Sunkavalli, Kalyan and Su, Hao and Xu, Zexiang},
+  title     = {{NeRFusion}: Fusing Radiance Fields for Large-Scale Scene Reconstruction},
+  booktitle = CVPR,
+  year      = {2022}
 }
 
 @inproceedings{Zhao2019,
