--- a/reference.bib
+++ b/reference.bib
@@ -80,7 +80,6 @@
   year      = {2020}
 }
 
-
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
   title   = {Detail-replicating shape stretching},
@@ -90,13 +89,13 @@
   number  = {12}
 }
 
-
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -105,13 +104,13 @@
   year      = {1999}
 }
 
-
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
   title     = {{PointNetLK}: Robust \& Efficient Point Cloud Registration Using PointNet},
   year      = {2019}
 }
+
 
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
@@ -126,7 +125,6 @@
   journal = {arXiv preprint},
   year    = {2017}
 }
-
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -144,6 +142,7 @@
   volume  = {45},
   number  = {2}
 }
+
 
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
@@ -231,7 +230,6 @@
   journal = SIG
 }
 
-
 @article{Bailey2020,
   title   = {Fast and deep facial deformations},
   author  = {Bailey, Stephen W and Omens, Dalton and Dilorenzo, Paul and O'Brien, James F},
@@ -240,6 +238,7 @@
   number  = {4},
   year    = {2020}
 }
+
 
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
@@ -313,7 +312,6 @@
   year      = {2017}
 }
 
-
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
   title   = {Mixed-integer quadrangulation},
@@ -322,6 +320,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
@@ -350,13 +349,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
   title     = {Learning shape correspondence with anisotropic convolutional neural networks},
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
@@ -526,7 +525,6 @@
   year      = {2014}
 }
 
-
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -535,6 +533,7 @@
   volume  = {40},
   number  = {4}
 }
+
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -564,7 +563,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -579,6 +577,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -596,13 +595,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
   title     = {{4D} spatio-temporal convnets: {Minkowski} convolutional neural networks},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -622,7 +621,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
   title     = {Anisotropic geometric diffusion in surface processing},
@@ -637,6 +635,7 @@
   journal = {arXiv preprint arXiv:1801.10130},
   year    = {2018}
 }
+
 
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
@@ -848,7 +847,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
   title     = {Filter forests for learning data-dependent convolutional kernels},
@@ -864,6 +862,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
@@ -871,13 +870,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
   title     = {Structured prediction of unobserved voxels from a single depth image},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
@@ -993,7 +992,6 @@
   publisher = {MIT Press}
 }
 
-
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
@@ -1008,6 +1006,7 @@
   booktitle = BMVC,
   year      = {2015}
 }
+
 
 @article{Graham2017,
   author  = {Graham, Benjamin and van der Maaten, Laurens},
@@ -1060,7 +1059,6 @@
   year         = {2010}
 }
 
-
 @article{Guerrero2018,
   author  = {Paul Guerrero and Yanir Kleiman and Maks Ovsjanikov and Niloy J. Mitra},
   title   = {{PCPNet}: Learning local shape properties from raw point clouds},
@@ -1078,6 +1076,7 @@
   volume  = {35},
   number  = {1}
 }
+
 
 @inproceedings{Guo2018,
   author    = {Guo, Yuxiao and Tong, Xin},
@@ -1670,7 +1669,6 @@
   volume    = {1666}
 }
 
-
 @article{Kopf2007,
   author  = {Kopf, Johannes and Cohen, Michael F. and Lischinski, Dani and Uyttendaele, Matt},
   title   = {Joint bilateral upsampling},
@@ -1679,6 +1677,7 @@
   volume  = {26},
   number  = {3}
 }
+
 
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
@@ -1786,7 +1785,6 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
-
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1805,6 +1803,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
@@ -1837,13 +1836,13 @@
   year      = 2018
 }
 
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
   journal = TOG,
   year    = {2020}
 }
+
 
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
@@ -1860,6 +1859,7 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
+
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1868,7 +1868,6 @@
   volume  = {35},
   number  = {5}
 }
-
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2185,6 +2184,13 @@
   year    = {2015},
   volume  = {34},
   number  = {4}
+}
+
+@article{Muller2022,
+  title   = {Instant Neural Graphics Primitives with a Multiresolution Hash Encoding},
+  author  = {M{\"u}ller, Thomas and Evans, Alex and Schied, Christoph and Keller, Alexander},
+  journal = {arXiv preprint arXiv:2201.05989},
+  year    = {2022}
 }
 
 @article{Nader2014,
@@ -2966,6 +2972,16 @@
   year      = {2020}
 }
 
+@article{Tang2018,
+  title   = {Real-time Compression and Streaming of {4D} Performances},
+  author  = {Tang, Danhang and Dou, Mingsong and Lincoln, Peter and Davidson, Philip and Guo, Kaiwen and Taylor, Jonathan and Fanello, Sean and Keskin, Cem and Kowdle, Adarsh and Bouaziz, Sofien and others},
+  journal = TOG,
+  volume  = {37},
+  number  = {6},
+  year    = {2018}
+}
+
+
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
@@ -2980,7 +2996,6 @@
   booktitle = NeurIPS,
   year      = {2021}
 }
-
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -3005,13 +3020,13 @@
   year      = {2002}
 }
 
+
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3034,6 +3049,7 @@
   year      = 2019
 }
 
+
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3048,7 +3064,6 @@
   booktitle = IROS,
   year      = {2017}
 }
-
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3280,6 +3295,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
   author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
@@ -3294,7 +3310,6 @@
   booktitle = {IJCAI},
   year      = {2021}
 }
-
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3335,11 +3350,11 @@
   year      = {2021}
 }
 
-@article{Williams2021a,
-  title   = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
-  author  = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
-  journal = {arXiv preprint arXiv:2111.13674},
-  year    = {2021}
+@inproceedings{Williams2022,
+  title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
+  author    = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
+  booktitle = CVPR,
+  year      = {2022}
 }
 
 @article{Wu2005,
@@ -3350,6 +3365,7 @@
   volume  = {24},
   number  = {3}
 }
+
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
