--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,3 @@
-% Encoding: UTF-8
-
 @String { AAAI     = {AAAI} }
 @String { ADVMATH  = {Adv. Comput. Math.} }
 @String { ANM      = {Appl. Numer. Math.} }
@@ -12,11 +10,11 @@
 @String { EG       = {Comput. Graph. Forum (EG)} }
 @String { ENGCOM   = {Eng. Comput.} }
 @String { ICCV     = {ICCV} }
-@String { IROS     = {IROS} } 
 @String { ICLR     = {ICLR} }
 @String { ICML     = {ICML} }
 @String { IJNME    = {Int. J. Numer. Meth. Eng.} }
 @String { IMR      = {Int. Meshing Roundtable} }
+@String { IROS     = {IROS} }
 @String { MATHCOMP = {Math. Comput.} }
 @String { NeurIPS  = {NeurIPS} }
 @String { PG       = {Comput. Graph. Forum (PG)} }
@@ -178,8 +176,8 @@
 
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
+  booktitle = {ICCV Workshop},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
-  booktitle = {ICCV Workshops},
   year      = {2011}
 }
 
@@ -979,10 +977,10 @@
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {Consistent segmentation of {3D} models},
-  journal = {Computers and Graphics},
-  year    = {2009},
+  number  = {3},
   volume  = {33},
-  number  = {3}
+  journal = {Computers \& Graphics},
+  year    = {2009}
 }
 
 @book{Goodfellow2016,
@@ -1868,6 +1866,7 @@
   volume  = {35},
   number  = {5}
 }
+
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2293,7 +2292,7 @@
 
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
-  booktitle = {ICLR (workshop)},
+  booktitle = {ICLR workshop},
   title     = {An analysis of unsupervised pre-training in light of recent advances},
   year      = {2015}
 }
@@ -3275,9 +3274,9 @@
 }
 
 @inproceedings{Wang2020,
-  title     = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
   author    = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
-  booktitle = {CVPR Workshops},
+  booktitle = {CVPR Workshop},
+  title     = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
   year      = {2020}
 }
 
@@ -3540,8 +3539,8 @@
 
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
+  booktitle = {Geom. Model. and Proc.},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
-  booktitle = {Geometric Modeling and Processing - GMP},
   year      = {2006}
 }
 
