--- a/reference.bib
+++ b/reference.bib
@@ -997,7 +997,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Graham2015,
   author    = {Ben Graham},
   title     = {Sparse {3D} convolutional neural networks},
@@ -1012,6 +1011,7 @@
   journal = {arXiv preprint arXiv:1706.01307},
   year    = {2017}
 }
+
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1065,7 +1065,6 @@
   volume  = {37}
 }
 
-
 @article{Guo2015,
   author  = {Guo, Kan and Zou, Dongqing and Chen, Xiaowu},
   title   = {{3D} mesh labeling via deep convolutional neural networks},
@@ -1082,6 +1081,7 @@
   booktitle = {IJCAI},
   year      = {2018}
 }
+
 
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
@@ -1335,6 +1335,13 @@
   year    = {2011},
   volume  = {30},
   number  = {6}
+}
+
+@inproceedings{Huang2016,
+  title     = {Deep networks with stochastic depth},
+  author    = {Huang, Gao and Sun, Yu and Liu, Zhuang and Sedra, Daniel and Weinberger, Kilian Q},
+  booktitle = ECCV,
+  year      = {2016}
 }
 
 @article{Huang2018,
@@ -3688,6 +3695,13 @@
   year    = {2021}
 }
 
+@inproceedings{Yun2019,
+  title     = {{CutMix}: Regularization Strategy to Train Strong Classifiers with Localizable Features},
+  author    = {Yun, Sangdoo and Han, Dongyoon and Oh, Seong Joon and Chun, Sanghyuk and Choe, Junsuk and Yoo, Youngjoon},
+  booktitle = ICCV,
+  year      = {2019}
+}
+
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
   title     = {Surface feature detection and description with applications to mesh matching},
@@ -3718,6 +3732,7 @@
   number  = {6}
 }
 
+
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3727,13 +3742,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3743,7 +3758,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3761,13 +3775,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3776,13 +3790,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3877,14 +3891,14 @@
 @article{Zhou2018,
   title   = {{Open3D}: A modern library for {3D} data processing},
   author  = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
-  journal = {arXiv:1801.09847},
+  journal = {arXiv preprint arXiv:1801.09847},
   year    = {2018}
 }
 
 @article{Zhou2021,
   title   = {Simple multi-dataset detection},
   author  = {Zhou, Xingyi and Koltun, Vladlen and Kr{\"a}henb{\"u}hl, Philipp},
-  journal = {arXiv:2102.13086},
+  journal = {arXiv preprint arXiv:2102.13086},
   year    = {2021}
 }
 
@@ -3895,13 +3909,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
   author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas Guibas and Hao Zhang},
   year      = {2020},
   booktitle = CVPR
 }
-
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
